k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/01-bloqueia-gateway-todo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: defualt-deny-all
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
