k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/02-libera-entry-redis-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: libera-entry-redis-app
  namespace: giropops
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: giropops-senhas
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: giropops
