k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/03-libera-gatewayapi copy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: libera-ingress-gatewayapi
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                - giropops
                - nginx-gateway
                - default
                - kube-system
                - kube-node-lease
                - kube-public
      # ports:
      #   - protocol: TCP
      #     port: 5000
