k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/03-libera-gatewayapi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: libera-ingress-gatewayapi
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  #   - Egress
  # egress:
  #   - to:
  #     - namespaceSelector:
  #         matchExpressions:
  #           - key: kubernetes.io/metadata.name
  #             operator: In
  #             values: 
  #               - nginx-gateway
  #               - kube-system
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                - nginx-gateway
                - kube-system
      ports:
        - protocol: TCP
          port: 5000
