k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/04-ajusta-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ajusta-egress-gatewayapi
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                - kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
