k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/05-libera-saida-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: libera-saida-redis
  namespace: giropops
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: redis
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: giropops
