k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/06-bloqueando-redes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: libera-saida-redis
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.100.0.0/16
          except:
          - 10.100.10.0/24
