k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/grcp_error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-to-ngf
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: giropops-senhas
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - nginx-gateway
                  # - giropops
                  - kube-system
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nginx-gateway-fabric
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 8443          
  egress:
    - to:
        # - ipBlock:
        #     cidr: 10.100.0.0/16
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - nginx-gateway
                  - giropops
                  - kube-system
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nginx-gateway-fabric
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 8443
