k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/primeira-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: primeira-netpol
  namespace: giropops
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
