k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/quarta-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quarta-netpol
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: #mesmo com todas as ns declaradas, o tráfego de entrada não é permitido, pois o tráfego de entrada não funciona. Preciso fazer o troubleshooting do tráfego de entrada.
    - from: 
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                - giropops
                - nginx-gateway
