k8s/Day16/EKS-NetworkPolicy-GatewayAPI/NetPol/segunda-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: segunda-netpol
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from: 
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: giropops
